tests/invalid/mostly_uniq2.err_exp
mostly_uniq2.m:012: In clause for `foo(di, uo)':
mostly_uniq2.m:012:   in argument 2 of call to predicate `io.write_int/3':
mostly_uniq2.m:012:   mode error: variable `DCG_0' has instantiatedness `mostly_unique',
mostly_uniq2.m:012:   expected instantiatedness was `unique'.
For more information, try recompiling with `-E'.
